fix: z-index DocLayout

--- a/src/components/DocLayout/DocLayout.scss
+++ b/src/components/DocLayout/DocLayout.scss
@@ -103,7 +103,7 @@
                     var(--dc-subnavigation-height, #{$subNavigationHeight}) + 1px
             );
             left: calc(0px - 100vw - 6px);
-            z-index: 119;
+            z-index: 118;
 
             box-sizing: border-box;
             max-height: calc(
